<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcomeMessage"
        android:layout_width="266dp"
        android:layout_height="209dp"
        android:fontFamily="@font/seguisb"
        android:text="@string/welcome_message"
        android:textColor="@color/pureBlack"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.406"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.147" />

    <Button
        android:id="@+id/button"
        android:layout_width="187dp"
        android:layout_height="70dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/main_button"
        android:fontFamily="@font/seguisb"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/pureWhite"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="82dp"
        android:layout_height="25dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/minor_button"
        android:fontFamily="@font/seguisb"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>