<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.register_screen">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_screen">

        <TextView
            android:id="@+id/textView"
            android:layout_width="154dp"
            android:layout_height="134dp"
            android:fontFamily="@font/seguisb"
            android:text="@string/register_email"
            android:textColor="@color/pureBlack"
            android:textSize="50sp"
            app:layout_constraintBottom_toTopOf="@+id/email_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.143"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.911" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.976" />

        <Button
            android:id="@+id/regsiter_enter"
            android:layout_width="187dp"
            android:layout_height="70dp"
            android:layout_marginBottom="24dp"
            android:text="@string/enter"
            android:textSize="30sp"
            android:textColor="@color/pureWhite"
            android:fontFamily="@font/seguisb"
            android:textAllCaps="false"
            android:background="@drawable/main_button"
            app:layout_constraintBottom_toTopOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/second_password_input"
            android:layout_width="336dp"
            android:layout_height="43dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:background="@drawable/user_input_area"
            android:hint="@string/register_password_2"
            android:inputType="textPassword"
            android:textSize="13sp"
            app:layout_constraintBottom_toTopOf="@+id/regsiter_enter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/first_password_input"
            android:layout_width="336dp"
            android:layout_height="43dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:background="@drawable/user_input_area"
            android:hint="@string/register_password"
            android:inputType="textPassword"
            android:textSize="13sp"
            app:layout_constraintBottom_toTopOf="@+id/second_password_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/email_input"
            android:layout_width="336dp"
            android:layout_height="43dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:background="@drawable/user_input_area"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint"
            android:textSize="13sp"
            app:layout_constraintBottom_toTopOf="@+id/first_password_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>