<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/login_screen"
    tools:context=".login.login_screen">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/login_enter"
            android:layout_width="187dp"
            android:layout_height="70dp"
            android:layout_marginBottom="76dp"
            android:background="@drawable/main_button"
            android:fontFamily="@font/seguisb"
            android:text="@string/enter"
            android:textAllCaps="false"
            android:textColor="@color/pureWhite"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/password_field"
            android:layout_width="336dp"
            android:layout_height="43dp"
            android:layout_marginBottom="60dp"
            android:background="@drawable/user_input_area"
            android:ems="10"
            android:fontFamily="@font/regular"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColor="@color/pureBlack"
            android:textSize="13sp"
            app:layout_constraintBottom_toTopOf="@+id/login_enter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/email_field"
            android:layout_width="336dp"
            android:layout_height="43dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/user_input_area"
            android:ems="10"
            android:fontFamily="@font/regular"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:textColor="@color/pureBlack"
            android:textSize="13sp"
            app:layout_constraintBottom_toTopOf="@+id/password_field"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="163dp"
            android:layout_height="142dp"
            android:layout_marginBottom="28dp"
            android:fontFamily="@font/seguisb"
            android:text="@string/sign_in_prompt"
            android:textColor="@color/pureBlack"
            android:textSize="50sp"
            app:layout_constraintBottom_toTopOf="@+id/email_field"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.149"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.995" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>